--- a/projects/01_fyyur/starter_code/templates/forms/edit_artist.html
+++ b/projects/01_fyyur/starter_code/templates/forms/edit_artist.html
@@ -4,34 +4,52 @@
   <div class="form-wrapper">
     <form class="form" method="post" action="/artists/{{artist.id}}/edit">
       <h3 class="form-heading">Edit artist <em>{{ artist.name }}</em></h3>
-      <div class="form-group">
-        <label for="name">Name</label>
-        {{ form.name(class_ = 'form-control', autofocus = true) }}
-      </div>
-      <div class="form-group">
-          <label>City & State</label>
-          <div class="form-inline">
-            <div class="form-group">
-              {{ form.city(class_ = 'form-control', placeholder='City', autofocus = true) }}
+       <div class="form-group">
+                <label for="name">Name</label>
+                {{ form.name(class_ = 'form-control', autofocus = true, value=artist.name) }}
             </div>
             <div class="form-group">
-              {{ form.state(class_ = 'form-control', placeholder='State', autofocus = true) }}
+                <label>City & State</label>
+                <div class="form-inline">
+                    <div class="form-group">
+                        {{ form.city(class_ = 'form-control', placeholder='City', value=artist.city) }}
+                    </div>
+                    <div class="form-group">
+                        {{ form.state(class_ = 'form-control', placeholder='State', value=artist.state) }}
+                    </div>
+                </div>
             </div>
-          </div>
-      </div>
-      <div class="form-group">
-          <label for="phone">Phone</label>
-          {{ form.phone(class_ = 'form-control', placeholder='xxx-xxx-xxxx', autofocus = true) }}
-        </div>
-      <div class="form-group">
-        <label for="genres">Genres</label>
-        <small>Ctrl+Click to select multiple</small>
-        {{ form.genres(class_ = 'form-control', placeholder='Genres, separated by commas', id=form.state, autofocus = true) }}
-      </div>
-      <div class="form-group">
-          <label for="genres">Facebook Link</label>
-          {{ form.facebook_link(class_ = 'form-control', placeholder='http://', id=form.state, autofocus = true) }}
-        </div>
+            <div class="form-group">
+                <label for="phone">Phone</label>
+                {{ form.phone(class_ = 'form-control', placeholder='xxx-xxx-xxxx', value=artist.phone) }}
+            </div>
+            <div class="form-group">
+                <label for="website">Website</label>
+                {{ form.website(class_ = 'form-control', placeholder='http://', value=artist.website) }}
+            </div>
+
+            <div class="form-group">
+                <label for="genres">Genres</label>
+                <small>Ctrl+Click to select multiple</small>
+                {{ form.genres(class_ = 'form-control', placeholder='Genres, separated by commas', value=artist.genres) }}
+            </div>
+            <div class="form-group">
+                <label for="image_link">Image Link</label>
+                {{ form.image_link(class_ = 'form-control', placeholder='http://', value=artist.image_link) }}
+            </div>
+            <div class="form-group">
+                <label for="seeking_venue">Seeking Venue?</label>
+                {{ form.seeking_venue(class_ = 'form-control', value=artist.seeking_venue) }}
+            </div>
+            <div class="form-group">
+                <label for="seeking_description">What kind of venue are you seeking?</label>
+                {{ form.seeking_description(class_ = 'form-control', value=artist.seeking_description) }}
+            </div>
+            <div class="form-group">
+                <label for="facebook_link">Facebook Link</label>
+                {{ form.facebook_link(class_ = 'form-control', placeholder='http://', value=artist.facebook_link) }}
+            </div>
+            {{ form.csrf_token}}
       <input type="submit" value="Edit Artist" class="btn btn-primary btn-lg btn-block">
     </form>
   </div>
